// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  id="default"
>
  <div
    className="markdown-body"
  />
</div>
`;

exports[`Render properties.content = table - value[0] 1`] = `
<div
  className="{}"
  id="properties.content = table"
>
  <div
    className="markdown-body"
  >
    <h3>
      Table
    </h3>
    <table>
      <thead>
        <tr>
          <th
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            A
          </th>
          <th
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            B
          </th>
          <th
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            C
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            one
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            two
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            three
          </td>
        </tr>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            345
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            34892
          </td>
        </tr>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            true
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            false
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            none
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  className="{}"
  id="properties.content"
>
  <div
    className="markdown-body"
  >
    <h1>
      One Heading
    </h1>
    <p>
      A paragraph with 
      <em>
        emphasis
      </em>
       and 
      <strong>
        strong importance
      </strong>
      .
    </p>
    <blockquote>
      <p>
        A block quote with 
        <del>
          strikethrough
        </del>
         and a URL: 
        <a
          href="https://reactjs.org"
        >
          https://reactjs.org
        </a>
        .
      </p>
    </blockquote>
    <h4>
      Link
    </h4>
    <p>
      <a
        href="https://lowdefy.com"
      >
        A link to Lowdefy
      </a>
    </p>
    <h1>
      Two
    </h1>
    <ul>
      <li>
        Lists
      </li>
      <li>
        <input
          checked={false}
          readOnly={true}
          type="checkbox"
        />
        todo
      </li>
      <li>
        <input
          checked={true}
          readOnly={true}
          type="checkbox"
        />
        done
      </li>
    </ul>
    <p>
      A table:
    </p>
    <table>
      <thead>
        <tr>
          <th>
            a
          </th>
          <th>
            b
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`Render properties.content DangerousHtml - value[0] 1`] = `
<div
  className="{}"
  id="properties.content DangerousHtml"
>
  <div
    className="markdown-body"
  >
    <h3>
      Link
    </h3>
    <p>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<a href=\\"https://lowdefy.com\\">",
          }
        }
      />
      Lowdefy link
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "</a>",
          }
        }
      />
    </p>
    <p>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "<font size=\\"+10\\">",
          }
        }
      />
      Description
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "</font>",
          }
        }
      />
    </p>
    <h3>
      Bad HTML
    </h3>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<div>
  <a>delta</a>
  <img src=\\"x\\">",
        }
      }
    />
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "  <math>
    <mi></mi>
  </math>
</div>",
        }
      }
    />
  </div>
</div>
`;

exports[`Render properties.content with code - value[0] 1`] = `
<div
  className="{}"
  id="properties.content with code"
>
  <div
    className="markdown-body"
  >
    <h3>
      Code
    </h3>
    <p>
      Default
    </p>
    <pre>
      <code>
          &lt;a href="https://lowdefy.com"&gt;Default style&lt;/a&gt;
      </code>
    </pre>
    <p>
      Html
    </p>
    <pre>
      <code
        className="language-html"
      >
          &lt;a href=""&gt;html style&lt;/a&gt;
  
      </code>
    </pre>
    <p>
      Json
    </p>
    <pre>
      <code
        className="language-json"
      >
          {
    "obj": "one",
    "list": [
      1,
      2
    ]
  }
      </code>
    </pre>
    <p>
      Bad HTML
    </p>
    <pre>
      <code
        className="language-html"
      >
        &lt;div&gt;
  &lt;a&gt;delta&lt;/a&gt;
  &lt;img src="x"&gt;
  
  &lt;math&gt;
    &lt;mi&gt;&lt;/mi&gt;
  &lt;/math&gt;
&lt;/div&gt;

      </code>
    </pre>
  </div>
</div>
`;

exports[`Render properties.html-DOMPurifyOptions.ADD_TAGS-iframe - value[0] 1`] = `
<div
  className="{}"
  id="properties.html-DOMPurifyOptions.ADD_TAGS-iframe"
>
  <div
    className="markdown-body"
  >
    <h2>
      With iframe ADD_TAGS:
    </h2>
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<iframe src=\\"https://www.youtube.com/embed/7N7GWdlQJlU\\" height=\\"315\\" width=\\"560\\"></iframe>",
        }
      }
    />
  </div>
</div>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  className="{}"
  id="properties.html-iframe"
>
  <div
    className="markdown-body"
  >
    <p>
      No additional ADD_TAGS:
    </p>
  </div>
</div>
`;

exports[`Render properties.style and headings - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"border\\":\\"1px solid blue\\"}}"
  id="properties.style and headings"
>
  <div
    className="markdown-body"
  >
    <h1>
      One
    </h1>
    <h2>
      Two
    </h2>
    <h3>
      Three
    </h3>
    <h4>
      Four
    </h4>
    <h5>
      Five
    </h5>
    <h6>
      Six
    </h6>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content = table 1`] = `true`;

exports[`Test Schema properties.content = table 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.content DangerousHtml 1`] = `true`;

exports[`Test Schema properties.content DangerousHtml 2`] = `null`;

exports[`Test Schema properties.content with code 1`] = `true`;

exports[`Test Schema properties.content with code 2`] = `null`;

exports[`Test Schema properties.html-DOMPurifyOptions.ADD_TAGS-iframe 1`] = `true`;

exports[`Test Schema properties.html-DOMPurifyOptions.ADD_TAGS-iframe 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.style and headings 1`] = `true`;

exports[`Test Schema properties.style and headings 2`] = `null`;
